# gherkin-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: compiler.hpp  gherkin.hpp  parser.hpp
src/: compiler.cpp  parser.cpp
test/: CMakeLists.txt  main.cpp  run_tests.py
test/testdata/bad/: inconsistent_cell_count.feature.out  invalid_language.feature.out  multiple_parser_errors.feature.out  not_gherkin.feature.out  single_parser_error.feature.out  unexpected_eof.feature.out
test/testdata/good/: background.feature.out  datatables.feature.out  descriptions.feature.out  docstrings.feature.out  empty.feature.out  escaped_pipes.feature.out  example_token_multiple.feature.out  example_tokens_everywhere.feature.out  i18n_emoji.feature.out  i18n_fr.feature.out  i18n_no.feature.out  incomplete_background_1.feature.out  incomplete_background_2.feature.out  incomplete_feature_1.feature.out  incomplete_feature_2.feature.out  incomplete_feature_3.feature.out  incomplete_scenario.feature.out  incomplete_scenario_outline.feature.out  language.feature.out  minimal.feature.out  readme_example.feature.out  scenario_outline.feature.out  scenario_outline_no_newline.feature.out  scenario_outlines_with_tags.feature.out  several_examples.feature.out  spaces_in_language.feature.out  tags.feature.out
